升级：Spring Boot 3.4.4, JDK 25, Lombok 1.18.40
- 升级 Spring Boot: 3.4.1 → 3.4.4
- 升级 Java: 21 → 25
- 升级 Lombok: 移除 optional=true，保持 provided scope
- 完善 .gitignore
- 更新 SPEC.md 架构图（mermaid）
- 修复 maven-compiler-plugin 配置