@@ -6,8 +6,62 @@
 |--------|----------------------|
 | 路径 | /Users/junw/Documents/GitHub/test-BookMarkAnalysis |
 | 简介 | 浏览器书签解析、存储、分析和导出系统 |
-| 技术栈 | Spring Boot 3.4.1 + MyBatis-Plus 3.5.9 + MySQL + Jsoup + Caffeine |
+| 技术栈 | Spring Boot 3.4.4 + MyBatis-Plus 3.5.9 + MySQL + Jsoup + Caffeine |
 | License | AGPL-3.0 |
+
+## 架构图
+
+```mermaid
+graph TB
+    subgraph Frontend["前端层"]
+        HTML[HTML书签文件]
+        Plist[Safari plist文件]
+        JSON[JSON格式]
+    end
+
+    subgraph Parser["解析层"]
+        HTMLParser[HTML解析器]
+        PlistParser[Plist解析器]
+        JsonParser[JSON解析器]
+    end
+
+    subgraph Service["服务层"]
+        ParseService[解析服务]
+        AnalysisService[分析服务]
+        ExportService[导出服务]
+        CheckService[链接检测服务]
+    end
+
+    subgraph Storage["存储层"]
+        MySQL[(MySQL)]
+        Cache[(Caffeine Cache)]
+    end
+
+    subgraph API["API层"]
+        UploadController[上传控制器]
+        BookmarkController[书签控制器]
+        ExportController[导出控制器]
+        Swagger[Swagger/OpenAPI]
+    end
+
+    HTML --> HTMLParser
+    Plist --> PlistParser
+    JSON --> JsonParser
+    
+    HTMLParser --> ParseService
+    PlistParser --> ParseService
+    JsonParser --> ParseService
+    
+    ParseService --> MySQL
+    ParseService --> Cache
+    AnalysisService --> MySQL
+    ExportService --> MySQL
+    CheckService --> Cache
+    
+    UploadController --> ParseService
+    BookmarkController --> AnalysisService
+    ExportController --> ExportService
+```
 
 ## 功能概述
 
@@ -23,31 +77,12 @@
 src/main/java/wo1261931780/
 ├── controller/     # 控制器层（Bookmark/Upload/Export）
 ├── service/        # 服务层（Parse/Analysis/Export/Check）
-├── mapper/         # MyBatis Mapper
+├── mapper/        # MyBatis Mapper
 ├── entity/        # 实体类
 ├── parser/        # HTML/Plist 解析器
 ├── config/        # Swagger/Cache 配置
 └── utils/         # 工具类
 ```
-
-## 编译问题
-
-**编译问题：JDK 25 与 Lombok 1.18.x 版本不兼容**
-
-错误信息：
-```
-Fatal error compiling: java.lang.ExceptionInInitializerError: com.sun.tools.javac.code.TypeTag :: UNKNOWN
-```
-
-原因分析：
-- 项目使用 Lombok 1.18.x，该版本与 JDK 25 不兼容
-- JDK 25 移除了部分 sun.misc.Unsafe 相关内部 API
-- lombok.permit.Permit 尝试调用已废弃的 sun.misc.Unsafe::objectFieldOffset 导致警告
-
-建议解决方案：
-1. 升级 Lombok 至 1.18.32+ 版本（支持 JDK 25）
-2. 或降级 JDK 至 17/21
-3. 或在编译参数中添加 `--add-opens=java.base/java.lang=ALL-UNNAMED`
 
 ## 数据库设计
 
@@ -74,6 +109,6 @@ Fatal error compiling: java.lang.ExceptionInInitializerError: com.sun.tools.java
 
 ## 环境要求
 
-- JDK 17+（当前使用 JDK 25 有兼容问题）
+- JDK 25
 - MySQL 8.x
 - Maven 3.6+
